# gestures-recognition

./: .gitignore  .travis.yml  CMakeLists.txt  Contour.cpp  Contour.h  CorrectionOfExposition.cpp  CorrectionOfExposition.h  Curvature.cpp  Debug.cpp  Debug.h  LICENSE  Timer.cpp  Timer.h  VideoSequenceCapture.cpp  VideoSequenceCapture.h  deletenoise.cpp  deletenoise.h  handDetector.cpp  handDetector.h
Motion detection/ViBe/: ViBe.cpp  ViBe.h
Motion detection/ViBe_plus/: ViBe_plus.cpp  ViBe_plus.h
Skin segmentation/: Skin_threthold.cpp  Skin_threthold.h  main.cpp  skin_segmentation.sln  skin_segmentation.vcxproj  skin_segmentation.vcxproj.filters
Src/: Contour.cpp  CorrectionOfExposition.cpp  Curvature.cpp  Debug.cpp  GesturesRecognition.cpp  Hand.cpp  Timer.cpp  ViBe.cpp  ViBe_plus.cpp  VideoSequenceCapture.cpp  deletenoise.cpp  handDetector.cpp  main.cpp
diploma/: diploma.sdf  diploma.sln  diploma.vcxproj  diploma.vcxproj.filters  main.cpp
include/: Contour.h  CorrectionOfExposition.h  Debug.h  GesturesRecognition.h  Hand.h  Timer.h  ViBe.h  ViBe_plus.h  VideoSequenceCapture.h  deletenoise.h  handDetector.h
